--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -1,57 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#E5DDD5"
-    tools:context=".activity.ChatBot">
+    android:layout_height="match_parent">
 
-    <!-- Toolbar -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <!-- Chat Messages Container -->
+    <ListView
+        android:id="@+id/chatListView"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/messageInputLayout"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="16dp"
+        android:padding="16dp"/>
 
-    <!-- RecyclerView for Chat Messages -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chatRecyclerView"
+    <!-- Message Input Layout -->
+    <RelativeLayout
+        android:id="@+id/messageInputLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_below="@id/toolbar"
-        android:background="@android:color/transparent"
-        android:paddingTop="8dp"
-        android:clipToPadding="false"
-        android:stackFromBottom="true"
-        app:layoutManager="LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
-    <!-- Input Field and Send Button -->
-    <LinearLayout
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="15dp"
-        tools:background="@color/cardview_dark_background">
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/white">
 
+        <!-- Message Input Field -->
+        <EditText
+            android:id="@+id/messageInput"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_toLeftOf="@+id/sendButton"
+            android:layout_toStartOf="@+id/sendButton"
+            android:hint="Type your message"
+            android:padding="2dp"/>
 
-
-        <TextView
-            android:id="@+id/text_progress_bar"
+        <!-- Send Button -->
+        <Button
+            android:id="@+id/sendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="10dp"
-            android:paddingEnd="20dp"
-            android:text="@{message}"
-            android:textSize="20sp"
-            tools:text="Loading.." />
-    </LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="Send"
+            android:backgroundTint="@color/black"/>
 
+    </RelativeLayout>
 </RelativeLayout>
