--- a/app/src/main/res/layout/fragment_careers10.xml
+++ b/app/src/main/res/layout/fragment_careers10.xml
@@ -1,15 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/careers10_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".carrersList.careers10">
 
-    <ListView
-        android:id="@+id/carrers_10_list"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null"
-        android:dividerHeight="0dp" />
+        android:layout_height="match_parent">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/chatbotButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:src="@android:drawable/ic_input_add"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/size"
+            android:layout_width="341dp"
+            android:layout_height="38dp"
+            android:layout_marginEnd="36dp"
+            android:layout_marginBottom="8dp"
+            android:text="Recommend Careers"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/carrers_10_list_recommended"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.296" />
+
+        <ListView
+            android:id="@+id/carrers_10_list_recommended"
+            android:layout_width="378dp"
+            android:layout_height="286dp"
+            android:layout_marginEnd="11dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="46dp" />
+
+        <ListView
+            android:id="@+id/carrers_10_list"
+            android:layout_width="399dp"
+            android:layout_height="428dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/carrers_10_list_recommended" >
+
+        </ListView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
